Fix image stretch issue in Home

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -70,8 +70,9 @@ body {
 
 .home {
   min-height: 700px;
-  background: url(./Assets/healthy_food.jpg);
-	background-size: 100% 100%;
+	background: url(./Assets/healthy_food.jpg);
+	/* background-size: 100% 100%; */
+	background-size: cover;
 	background-repeat: no-repeat;
   color: #000;
 
